--- a/equipo/equipo.html
+++ b/equipo/equipo.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css" class="res">
-    <link rel="stylesheet" href="../css/equipo.css" class="res">
-    <script src="https://kit.fontawesome.com/094d8d7db9.js" crossorigin="anonymous"></script>
-    <!-- Poppins Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>ORC</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/style.css" class="res">
+        <link rel="stylesheet" href="../css/equipo.css" class="res">
+        <script src="https://kit.fontawesome.com/094d8d7db9.js" crossorigin="anonymous"></script>
+    <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+        <title>ORC</title>
+    </head>
 <body>
     <div class="nav" id="nav">
         <a class="logo" href="../index.html"><img class="logo-img" src="../img/ORC.png"></a>
@@ -20,7 +19,8 @@
             <li><a href="equipo.html" class="nav-button">Equipo</a></li>
             <li><a href="../retos/retos.html" class="nav-button">Retos</a></li>
             <li><a href="../calendario/calendario.html" class="nav-button">Calendario</a></li>
-            <li><a href="https://docs.google.com/forms/d/1-GG4jfs8V_4SNcSYxb2LY-yjqomBWsSHNVS87-mgDyQ/edit" target="_blank" class="form-button">Apúntate</a></li>
+            <li><a href="https://r2.thecontesthub.com/1feb83da-8343-4244-88ef-4f3160642b49-Normas-y-reglamentos-de-la-ORC" class="nav-button">Normas</a></li>
+            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -31,21 +31,11 @@
     <section class="intro">
         <h1>¿Quiénes somos?</h1>
         <h3>
-            Esta competición ha sido posible gracias a la colaboración de ACM y Makers
+            Esta competición ha sido posible gracias a Makers.
         </h3>
     </section>
 
     <section class="groups">
-        <div class="group">
-            <div class="text">
-                <h1 class="acm">ACM</h1>
-                <p>
-                    Nuestro equipo está formado por estudiantes de la Universitat Politècnica de València que investigan y divulgan junto a expertos en materias como computación, interfaces, machine learning o inteligencia artificial.
-                    Compartimos conocimiento mediante talleres, charlas y eventos en los que los asistentes participan activamente. Creemos que haciendo cosas, aprendes más.
-                </p>
-            </div>
-            <img src="../img/vlctechwomen.jpeg">
-        </div>
         <div class="group group-makers">
             <img src="../img/makers.jpeg">
             <div class="text">
@@ -65,16 +55,6 @@
                <li><a href="equipo.html">Equipos</a></li>
                <li><a href="../retos/retos.html">Retos</a></li> 
                <li><a href="../calendario/calendario.html">Calendario</a></li> 
-            </ul>
-        </div>
-        <div class="footer-socials socials-div">
-            <div class="logo-cover"><a target="_blank" href="https://www.acm.webs.upv.es"><img class="acm-logo" src="../img/acmLogo.png" ></a></div>
-
-            <ul>
-                <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/acmupv"></a></li>
-                <li><a target="_blank" class="fa fa-github" href="https://github.com/acmupv"></a></li>
-                <li><a target="_blank" class="fa fa-linkedin" href="https://es.linkedin.com/company/acmupv"></a></li>
-                <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/acmupv/"></a></li>
             </ul>
         </div>
 
