--- a/equipo/equipo.html
+++ b/equipo/equipo.html
@@ -41,7 +41,7 @@
             <div class="text">
                 <h1 class="makers">MAKERS</h1>
                 <p>
-                    Makers UPV es una organización creada por y para los estudiantes de ingeniería, sin ánimo de lucro y basada en la cultura Maker y la filosofía DIY (Do It Yourself). 
+                    Makers UPV es una organización creada por y para estudiantes de ingeniería, sin ánimo de lucro y basada en la cultura Maker y la filosofía DIY (Do It Yourself). 
                     Nuestro objetivo en la universidad es formar a ingenieros en el ámbito más práctico y desarrollar proyectos en todos los campos de la ingeniería.
                 </p>
             </div>
