--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </section>
     <section class="third-section">
-        <h2>¿Preparado?</h2>
+        <h2>¿Preparadx?</h2>
         <p>
             ¿Tienes lo que se necesita superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo necesitas completar nuestro formulario para unirte a la competición:
         </p>
