--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -12,6 +12,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>ORC</title>
+	<!--Favicon-->
+	<link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+	<link rel="shortcut icon" href="/favicon/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+	<meta name="apple-mobile-web-app-title" content="ORC" />
+	<link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
 <body>
   <div id="loadOverlay" style="background-color:#f9cc3e; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
