--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="./equipo/equipo.html" class="nav-button">Equipo</a></li>
             <li><a href="./retos/retos.html" class="nav-button">Retos</a></li>
             <li><a href="./calendario/calendario.html" class="nav-button">Calendario</a></li>
-            <li><a href="https://r2.thecontesthub.com/1feb83da-8343-4244-88ef-4f3160642b49-Normas-y-reglamentos-de-la-ORC" class="nav-button">Normas</a></li>
+            <li><a href="https://r2.thecontesthub.com/1feb83da-8343-4244-88ef-4f3160642b49-Normas-y-reglamentos-de-la-ORC" target="_blank" class="nav-button">Normas</a></li>
             <li class="form-button-bg"><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
@@ -65,7 +65,7 @@
             <div class="container">
                 <h3>¿Dónde y cuándo se hará?</h3>
                 <p>
-                    La ORC tendrá lugar del 10 de febrero hasta el 7 de marzo y se realizará en tres ubicaciones: la ETSID, la Casa del Alumno y la ETSINF.
+                    La ORC tendrá lugar del 10 de febrero hasta el 7 de marzo y se realizará en la ETSIADI, dentro de la UPV.
                 </p>
                 <button><a href="./calendario/calendario.html">Calendario</a></button>
             </div>
@@ -74,7 +74,7 @@
     <section class="third-section">
         <h2>¿Preparadx?</h2>
         <p>
-            ¿Tienes lo que se necesita superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo necesitas completar nuestro formulario para unirte a la competición:
+            ¿Tienes lo que se necesita para superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo necesitas completar nuestro formulario para unirte a la competición:
         </p>
         <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank">Apúntate</a></button>
     </section>
