--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         </div>
     </section>
     <section class="third-section">
-        <h2>¿Preparadx?</h2>
+        <h2>¡Incríbite ya!</h2>
         <p>
             ¿Tienes lo que se necesita para superar los retos de la ORC? ¡Demuéstralo inscribiéndote hoy mismo! Sólo necesitas completar nuestro formulario para unirte a la competición:
         </p>
-        <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank">Apúntate</a></button>
+        <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank">Apuntarse</a></button>
     </section>
     <section class="footer">
         <div class="footer-socials">
