📈Horario talleres, 🖌️maximo de 6 en los equipos

--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -41,6 +41,8 @@
       <br>
       <h3>La competición tendrá lugar del 10 de febrero al 7 de marzo.</h3>
       <br>
+      <h3>Los talleres de formación y construcción se imparten los miércoles y jueves <br>a las 17:00 en la ETSIADI, con opción a talleres complementarios bajo petición.</h3>
+      <br>
       <h3>El calendario detallado con sesiones y talleres saldrá próximamente™.</h3>
     </section>
     <section class="section-calendar" style="display: none;">
