--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <div class="container">
                 <h3>¿Qué necesitas?</h3>
                 <p>
-                    Forma un equipo de hasta 4 personas, trae tu portátil y prepárate para la aventura. Nosotros nos encargaremos de proporcionarte el resto de las herramientas necesarias. 
+                    Forma un equipo de hasta 6 personas (se recomienda ser 4), trae tu portátil y prepárate para la aventura. Nosotros nos encargaremos de proporcionarte el resto de las herramientas necesarias. 
                 </p>
             </div>
             <div class="container">
                 <h3>¿Dónde y cuándo se hará?</h3>
                 <p>
-                    La ORC tendrá lugar del 10 de febrero hasta el 7 de marzo y se realizará en la ETSIADI, dentro de la UPV.
+                    La ORC tendrá lugar del 10 de febrero hasta el 7 de marzo y se realizará en la ETSIADI (UPV). <br> Habrá talleres para construir los robots los miércoles y jueves a las 17:00.
                 </p>
                 <button><a href="./calendario/calendario.html">Calendario</a></button>
             </div>
