Añadido logos y algunos fixes

--- a/equipo/equipo.html
+++ b/equipo/equipo.html
@@ -56,12 +56,13 @@
     </section>
 
     <section class="footer">
-        <div class="footer-socials">
+        <div class="widthLimit">
+                    <div class="footer-socials">
             <p class="titles footer-title">Información</p>
             <ul>
-               <li><a href="equipo.html">Equipos</a></li>
-               <li><a href="../retos/retos.html">Retos</a></li> 
-               <li><a href="../calendario/calendario.html">Calendario</a></li> 
+            <li><a href="./equipo/equipo.html">Equipos</a></li>
+            <li><a href="./retos/retos.html">Retos</a></li> 
+            <li><a href="./calendario/calendario.html">Calendario</a></li> 
             </ul>
         </div>
 
@@ -76,7 +77,9 @@
             </ul>
         </div>
         <div class="logos ">
+            <img src="../img/logos.png" alt="Logos">
         </div>
+    </div>
     </section>
     <script src="../js/index.js"></script>
 </body>
