--- a/retos/retos.html
+++ b/retos/retos.html
@@ -62,19 +62,18 @@
     </section>
 
     <section class="footer">
-        <div class="footer-socials">
+        <div class="widthLimit">
+                    <div class="footer-socials">
             <p class="titles footer-title">Información</p>
             <ul>
-                <li><a href="../equipo/equipo.html">Equipos</a></li>
-                <li><a href="retos.html">Retos</a></li>
-                <li><a href="../calendario/calendario.html">Calendario</a></li>
+            <li><a href="./equipo/equipo.html">Equipos</a></li>
+            <li><a href="./retos/retos.html">Retos</a></li> 
+            <li><a href="./calendario/calendario.html">Calendario</a></li> 
             </ul>
         </div>
 
         <div class="footer-socials socials-div">
-            <div class="logo-cover">
-                <a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png"></a>
-            </div>
+            <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
 
             <ul>
                 <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
@@ -83,7 +82,11 @@
                 <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
             </ul>
         </div>
-    </section>
+        <div class="logos ">
+            <img src="../img/logos.png" alt="Logos">
+        </div>
+    </div>
+</section>
     <script src="../js/index.js"></script>
 </body>
 </html>
