--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -179,28 +179,31 @@
     </section>
 
     <section class="footer">
-        <div class="footer-socials">
-            <p class="titles footer-title">Información</p>
-            <ul>
-               <li><a href="../equipo/equipo.html">Equipos</a></li>
-               <li><a href="../retos/retos.html">Retos</a></li> 
-               <li><a href="../calendario/calendario.html">Calendario</a></li> 
-            </ul>
-        </div>
+      <div class="widthLimit">
+                  <div class="footer-socials">
+          <p class="titles footer-title">Información</p>
+          <ul>
+          <li><a href="./equipo/equipo.html">Equipos</a></li>
+          <li><a href="./retos/retos.html">Retos</a></li> 
+          <li><a href="./calendario/calendario.html">Calendario</a></li> 
+          </ul>
+      </div>
 
-        <div class="footer-socials socials-div">
-            <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
+      <div class="footer-socials socials-div">
+          <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
 
-            <ul>
-                <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
-                <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
-                <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
-                <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
-            </ul>
-        </div>
-        <div class="logos ">
-        </div>
-    </section>
+          <ul>
+              <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
+              <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
+              <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
+              <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
+          </ul>
+      </div>
+      <div class="logos ">
+          <img src="../img/logos.png" alt="Logos">
+      </div>
+  </div>
+</section>
     <script src="../js/index.js"></script>
 </body>
 </html>
