Calendario de talleres

--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -37,173 +37,59 @@
         </label>
     </div>
     <section class="intro" style="margin-bottom: 200px; margin-top: 200px;">
-      <h1>Calendario <br> (Próximamente)</h1>
+      <h1>Calendario</h1>
       <br>
       <h3>La competición tendrá lugar del 10 de febrero al 7 de marzo.</h3>
       <br>
       <h3>Los talleres de formación y construcción se imparten los miércoles y jueves <br>a las 17:00 en la ETSIADI, con opción a talleres complementarios bajo petición.</h3>
       <br>
-      <h3>El calendario detallado con sesiones y talleres saldrá próximamente™.</h3>
-    </section>
-    <section class="section-calendar" style="display: none;">
-      <div class="calendar">
-          <div class="timeline">
-            <div class="spacer"></div>
-            <div class="time-marker">15.00</div>
-            <div class="time-marker">16.00</div>
-            <div class="time-marker">17.00</div>
-            <div class="time-marker">18.00</div>
-            <div class="time-marker">19.00</div>
-            <div class="time-marker">20.00</div>
-            <div class="time-marker">21.00</div>
-          </div>
-          <div class="days">
-            <div class="day mon">
-              <div class="date">
-                <p class="date-num">9</p>
-                <p class="date-day">Jue</p>
-              </div>
-              <div class="events">
-                <div class="event start-4 end-8 primer-dia">
-                  <p class="title">Presentación</p>
-                  <p class="time">16.30 h - 21.00 h</p>
-                  <p class="time">LUGAR: Casa del alumno (Informática 2ª planta) Edificio 4K<br>
-                  Prestación material y reparto pruebas</p>
-                </div>
-              </div>
-            </div>
-            <div class="day tues">
-              <div class="date">
-                <p class="date-num">10</p>
-                <p class="date-day">Vie</p>
-              </div>
-              <div class="events">
-                  <div class="event start-4 end-9 dias-reto">
-                      <p class="title">Día 1</p>
-                      <p class="time">16.30 h - 21.00 h</p>
-                      <p class="time">LUGAR: ETSID (Laboratorio Penyagolosa) Edificio 7E</p>
-                    </div>
-              </div>
-            </div>
-            <div class="day wed">
-              <div class="date">
-                <p class="date-num">11</p>
-                <p class="date-day">Sab</p>
-              </div>
-              <div class="events">
-                  <div class="event start-4 end-9 dias-reto">
-                      <p class="title">Día 2</p>
-                      <p class="time">16.30 h - 21.00 h</p>
-                      <p class="time">LUGAR: Casa del alumno (Planta baja) Edificio 4K</p>
-                    </div>
-              </div>
-            </div>
-            <div class="day fri">
-              <div class="date">
-                <p class="date-num">12</p>
-                <p class="date-day">Dom</p>
-              </div>
-              <div class="events">
-              </div>
-            </div>
-          </div>
-        </div>
+      <h3>El calendario detallado con sesiones saldrá próximamente™.</h3>
+      <br><br>
+      <h2>Calendario de Talleres</h2>
 
-          <div class="calendar">
-              <div class="timeline">
-                <div class="spacer"></div>
-                <div class="time-marker">15.00</div>
-                <div class="time-marker">16.00</div>
-                <div class="time-marker">17.00</div>
-                <div class="time-marker">18.00</div>
-                <div class="time-marker">19.00</div>
-                <div class="time-marker">20.00</div>
-                <div class="time-marker">21.00</div>
-              </div>
-              <div class="days">
-                <div class="day mon">
-                  <div class="date">
-                    <p class="date-num">13</p>
-                    <p class="date-day">Lun</p>
-                  </div>
-                  <div class="events">
-                      <div class="event start-4 end-9 dias-reto">
-                          <p class="title">Día 3</p>
-                          <p class="time">16.30 h - 21.00 h</p>
-                          <p class="time">LUGAR: ETSINF (1G 0.4)</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="day tues">
-                  <div class="date">
-                    <p class="date-num">14</p>
-                    <p class="date-day">Mar</p>
-                  </div>
-                  <div class="events">
-                      <div class="event start-4 end-9 dias-reto">
-                          <p class="title">Día 4</p>
-                          <p class="time">16.30 h - 21.00 h</p>
-                          <p class="time">LUGAR: ETSID (Laboratorio Aitana) Edificio 7E</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="day wed">
-                  <div class="date">
-                    <p class="date-num">15</p>
-                    <p class="date-day">Mie</p>
-                  </div>
-                  <div class="events">
-                      <div class="event start-4 end-9 dias-reto">
-                          <p class="title">Día 5</p>
-                          <p class="time">16.30 h - 21.00 h</p>
-                          <p class="time">LUGAR: ETSINF (1G 0.4)</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="day fri">
-                  <div class="date">
-                    <p class="date-num">16</p>
-                    <p class="date-day">Jue</p>
-                  </div>
-                  <div class="events">
-                      <div class="event start-4 end-9 final">
-                          <p class="title">FINAL</p>
-                          <p class="time">16.30 h - 21.00 h</p>
-                          <p class="time">LUGAR: Casa del alumno (Planta baja) Edificio 4K</p>
-                        </div>
-                  </div>
-                </div>
-              </div>
-          </div>
+      <img src="../img/calendarioTalleres.jpg" 
+        style="max-width: 800px; width: 80%;"
+        alt="
+          Miércoles:
+          · 12/02: N12. Conceptos generales        
+          · 19/02: N12. Electrónica general.          
+          . 26/02: Brest. Programación del robot.          
+          . 05/03: Brest. Taller de dudas y libre.          
+          Jueves:
+          · 13/02: S06. Diseño y prototipo.
+          20/02: S06. Programacion base.
+          · 27/02: Brest. Pruebas en pista.
+          · 06/03: Brest. Taller de dudas y libre.
+    ">
 
     </section>
 
     <section class="footer">
       <div class="widthLimit">
-                  <div class="footer-socials">
-          <p class="titles footer-title">Información</p>
-          <ul>
-          <li><a href="./equipo/equipo.html">Equipos</a></li>
-          <li><a href="./retos/retos.html">Retos</a></li> 
-          <li><a href="./calendario/calendario.html">Calendario</a></li> 
-          </ul>
-      </div>
+          <div class="footer-socials">
+              <p class="titles footer-title">Información</p>
+              <ul>
+              <li><a href="./equipo/equipo.html">Equipos</a></li>
+              <li><a href="./retos/retos.html">Retos</a></li> 
+              <li><a href="./calendario/calendario.html">Calendario</a></li> 
+              </ul>
+          </div>
 
-      <div class="footer-socials socials-div">
-          <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
+          <div class="footer-socials socials-div">
+              <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
 
-          <ul>
-              <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
-              <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
-              <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
-              <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
-          </ul>
-      </div>
-      <div class="logos ">
-          <img src="../img/logos.png" alt="Logos">
-      </div>
-  </div>
-</section>
+              <ul>
+                  <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
+                  <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
+                  <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
+                  <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
+              </ul>
+          </div>
+          <div class="logos ">
+              <img src="../img/logos.png" alt="Logos">
+          </div>
+        </div>
+    </section>
     <script src="../js/index.js"></script>
 </body>
 </html>
