--- a/index.html
+++ b/index.html
@@ -79,30 +79,42 @@
         <button><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank">Apuntarse</a></button>
     </section>
     <section class="footer">
-            <div class="widthLimit">
-                        <div class="footer-socials">
-                <p class="titles footer-title">Información</p>
-                <ul>
-                <li><a href="./equipo/equipo.html">Equipos</a></li>
-                <li><a href="./retos/retos.html">Retos</a></li> 
-                <li><a href="./calendario/calendario.html">Calendario</a></li> 
-                </ul>
+
+            <div class="logos" 
+                 style="background-color: #ffffff; 
+                        padding-top: 18px;
+                        padding-bottom: 18px;">
+                <img src="./img/banda_logos_UPV_VRAIN_nueva.jpg" alt="Logos">
+            </div>
+            <div class="logos"
+                style=" padding: 32px;
+                        padding-bottom: 12px;
+                        width: 80%;
+                        align-self: center;">
+                <img src="./img/LogosRemake.png" alt="Logos">
             </div>
 
-            <div class="footer-socials socials-div">
-                <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="./img/makersLogo.png" ></a></div>
+            <div class="widthLimit" style="gap:80px; margin-bottom: 24px;">
+                <div class="footer-socials">
+                    <p class="titles footer-title"> Más Información</p>
+                    <ul>
+                    <li><a href="./equipo/equipo.html">Equipos</a></li>
+                    <li><a href="./retos/retos.html">Retos</a></li> 
+                    <li><a href="./calendario/calendario.html">Calendario</a></li> 
+                    </ul>
+                </div>
 
-                <ul>
-                    <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
-                    <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
-                    <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
-                    <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
-                </ul>
+                <div class="footer-socials socials-div">
+                    <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="./img/makersLogo.png" ></a></div>
+
+                    <ul>
+                        <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
+                        <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
+                        <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
+                        <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="logos ">
-                <img src="./img/logos.png" alt="Logos">
-            </div>
-        </div>
     </section>
 
     <script src="./js/index.js"></script>
