Added pdf file with the rules and regulations of the ORC

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="./equipo/equipo.html" class="nav-button">Equipo</a></li>
             <li><a href="./retos/retos.html" class="nav-button">Retos</a></li>
             <li><a href="./calendario/calendario.html" class="nav-button">Calendario</a></li>
-            <li><a href="https://r2.thecontesthub.com/862fabd7-1cd2-42b7-85ef-f2567d9b76f6-Normas-y-reglamentos-de-la-ORC" target="_blank" class="nav-button">Normas</a></li>
+            <li><a href="./normas/ORCWeb\img\Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a></li>
             <li class="form-button-bg"><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
