--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css" class="res">
@@ -10,26 +11,33 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <title>ORC</title>
-	<!--Favicon-->
-	<link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-	<link rel="shortcut icon" href="/favicon/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-	<meta name="apple-mobile-web-app-title" content="ORC" />
-	<link rel="manifest" href="/favicon/site.webmanifest" />
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="ORC" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
+
 <body>
-  <div id="loadOverlay" style="background-color:#f9cc3e; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
+    <div id="loadOverlay"
+        style="background-color:#f9cc3e; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;">
+    </div>
     <div class="nav" id="nav">
         <a class="logo" href="../index.html"><img class="logo-img" src="../img/ORC.png"></a>
         <ul class="nav-links">
             <li><a href="../equipo/equipo.html" class="nav-button">Equipo</a></li>
             <li><a href="../retos/retos.html" class="nav-button">Retos</a></li>
             <li><a href="../calendario/calendario.html" class="nav-button">Calendario</a></li>
-            <li><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a></li>
-            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank" class="form-button">Apúntate</a></li>
+            <li><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a>
+            </li>
+            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
+                    target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -37,71 +45,69 @@
         </label>
     </div>
     <section class="intro" style="margin-bottom: 200px; margin-top: 200px;">
-      <h1>Calendario</h1>
-      <br>
-      <h3>La competición tendrá lugar del 10 de febrero al 7 de marzo.</h3>
-      <br>
-      <h3>Los talleres de formación y construcción se imparten los miércoles y jueves <br>a las 17:00 en la ETSIADI, con opción a talleres complementarios bajo petición.</h3>
-      <br>
-      <h3>El calendario detallado con sesiones saldrá próximamente™.</h3>
-      <br><br>
-      <h2>Calendario de Talleres</h2>
+        <h1>Calendario</h1>
+        <br>
+        <h3>La competición tendrá lugar del 10 de febrero de 2026 al 13 de marzo.</h3>
+        <br>
+        <h3>Los talleres de formación y construcción se imparten los martes y viernes <br>a las 17:00 en la ETSIADI,
+            con opción a talleres complementarios bajo petición.</h3>
+        <br>
+        <h3>El calendario detallado con sesiones saldrá próximamente™.</h3>
+        <br><br>
+        <h2>Calendario de Talleres</h2>
 
-      <img src="../img/calendarioTalleres.jpg" 
-        style="max-width: 800px; width: 80%;"
-        alt="
-          Miércoles:
-          · 12/02: N12. Conceptos generales        
-          · 19/02: N12. Electrónica general.          
-          . 26/02: Brest. Programación del robot.          
-          . 05/03: Brest. Taller de dudas y libre.          
-          Jueves:
-          · 13/02: S06. Diseño y prototipo.
-          20/02: S06. Programacion base.
-          · 27/02: Brest. Pruebas en pista.
-          · 06/03: Brest. Taller de dudas y libre.
+        <img src="../img/Horarios_Talleres_2026.png" style="max-width: 800px; width: 80%; margin-top: 50px;" alt="
+          Martes:
+          · 10/02: Conceptos generales        
+          · 17/02: Electrónica general.          
+          · 24/02: Programación del robot.          
+          · 03/03: Taller de dudas y libre.          
+          Viernes:
+          · 13/02: Diseño y prototipo.
+          · 06/03: Taller de dudas y libre.
     ">
 
     </section>
 
     <section class="footer">
 
-      <div class="logos" 
-           style="background-color: #ffffff; 
+        <div class="logos" style="background-color: #ffffff; 
                   padding-top: 18px;
                   padding-bottom: 18px;">
-          <img src="../img/banda_logos_UPV_VRAIN_nueva.jpg" alt="Logos">
-      </div>
-      <div class="logos"
-          style=" padding: 32px;
+            <img src="../img/banda_logos_UPV_VRAIN_nueva.jpg" alt="Logos">
+        </div>
+        <div class="logos" style=" padding: 32px;
                   padding-bottom: 12px;
                   width: 80%;
                   align-self: center;">
-          <img src="../img/LogosRemake.png" alt="Logos">
-      </div>
+            <img src="../img/LogosRemake.png" alt="Logos">
+        </div>
 
-      <div class="widthLimit" style="gap:80px; margin-bottom: 24px;">
-          <div class="footer-socials">
-              <p class="titles footer-title"> Más Información</p>
-              <ul>
-              <li><a href="./equipo/equipo.html">Equipos</a></li>
-              <li><a href="./retos/retos.html">Retos</a></li> 
-              <li><a href="./calendario/calendario.html">Calendario</a></li> 
-              </ul>
-          </div>
+        <div class="widthLimit" style="gap:80px; margin-bottom: 24px;">
+            <div class="footer-socials">
+                <p class="titles footer-title"> Más Información</p>
+                <ul>
+                    <li><a href="./equipo/equipo.html">Equipos</a></li>
+                    <li><a href="./retos/retos.html">Retos</a></li>
+                    <li><a href="./calendario/calendario.html">Calendario</a></li>
+                </ul>
+            </div>
 
-          <div class="footer-socials socials-div">
-              <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
+            <div class="footer-socials socials-div">
+                <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo"
+                            src="../img/makersLogo.png"></a></div>
 
-              <ul>
-                  <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
-                  <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
-                  <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
-                  <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
-              </ul>
-          </div>
-      </div>
-</section>
+                <ul>
+                    <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
+                    <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
+                    <li><a target="_blank" class="fa fa-linkedin"
+                            href="https://www.linkedin.com/company/makers-upv/"></a></li>
+                    <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <script src="../js/index.js"></script>
 </body>
+
 </html>
