Refactor HTML structure and formatting

--- a/retos/retos.html
+++ b/retos/retos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,19 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <title>ORC</title>
-	<!--Favicon-->
-	<link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-	<link rel="shortcut icon" href="/favicon/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-	<meta name="apple-mobile-web-app-title" content="ORC" />
-	<link rel="manifest" href="/favicon/site.webmanifest" />
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="ORC" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
+
 <body>
     <div class="nav" id="nav">
         <a class="logo" href="../index.html"><img class="logo-img" src="../img/ORC.png"></a>
@@ -26,8 +30,10 @@
             <li><a href="../equipo/equipo.html" class="nav-button">Equipo</a></li>
             <li><a href="retos.html" class="nav-button">Retos</a></li>
             <li><a href="../calendario/calendario.html" class="nav-button">Calendario</a></li>
-            <li><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a></li>
-            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details" target="_blank" class="form-button">Apúntate</a></li>
+            <li><a href="../normas/Normas y reglamentos de la ORC.pdf" target="_blank" class="nav-button">Normas</a>
+            </li>
+            <li><a href="https://thecontesthub.com/es/contests/olympic-robotic-challenge-orc?tab=details"
+                    target="_blank" class="form-button">Apúntate</a></li>
         </ul>
         <label for="check" class="icon-class">
             <i class="fas fa-bars" id="btn"></i>
@@ -40,37 +46,39 @@
 
         <article>
             <h3>Laberinto</h3>
-            <p>Esta prueba se basa en que los robots recorran un laberinto de forma autónoma. El laberinto está conformado por una gran plataforma con paredes elevadas y líneas negras en el medio de los caminos. Para completar esta prueba se debe terminar todo el circuito sin salirse de las plataformas y sin quedarse trabado.</p>
+            <p>Esta prueba se basa en que los robots recorran un laberinto de forma autónoma. El laberinto está
+                conformado por una gran plataforma con paredes elevadas y líneas negras en el medio de los caminos. Para
+                completar esta prueba se debe terminar todo el circuito sin salirse de las plataformas y sin quedarse
+                trabado.</p>
         </article>
 
         <article>
             <h3>Fútbol</h3>
-            <p>La prueba consiste en un torneo eliminatorio de partidos 1 contra 1. Cada partida dura hasta tres minutos o al mejor de tres puntos. Los robots pueden ser autónomos o controlados a distancia. Se deberán evitar choques directos contra el contrario bajo penalización de descalificación tras tres infracciones.</p>
-        </article>
-
-        <article>
-            <h3>Velocidad</h3>
-            <p>Consiste en recorrer un circuito de plataformas con curvas y rectas en el menor tiempo posible. El movimiento deberá ser completamente autónomo, y para finalizar el circuito se debe evitar salirse de las plataformas o quedarse trabado.</p>
+            <p>La prueba consiste en un torneo eliminatorio de partidos 1 contra 1. Cada partida dura hasta tres minutos
+                o al mejor de tres puntos. Los robots pueden ser autónomos o controlados a distancia. Se deberán evitar
+                choques directos contra el contrario bajo penalización de descalificación tras tres infracciones.</p>
         </article>
 
         <article>
             <h3>Obstáculos</h3>
-            <p>En esta prueba se deben sortear varios obstáculos mientras se premia la velocidad. Solo se admitirán robots autónomos. La prueba se considera completada si el robot llega al final sin derribar obstáculos, salirse de la plataforma o quedarse trabado.</p>
+            <p>En esta prueba se deben sortear varios obstáculos mientras se premia la velocidad. Solo se admitirán
+                robots autónomos. La prueba se considera completada si el robot llega al final sin derribar obstáculos,
+                salirse de la plataforma o quedarse trabado.</p>
         </article>
-        <button><a href="https://r2.thecontesthub.com/862fabd7-1cd2-42b7-85ef-f2567d9b76f6-Normas-y-reglamentos-de-la-ORC" target="_blank">Más información</a></button>
+        <button><a
+                href="https://r2.thecontesthub.com/862fabd7-1cd2-42b7-85ef-f2567d9b76f6-Normas-y-reglamentos-de-la-ORC"
+                target="_blank">Más información</a></button>
 
     </section>
 
     <section class="footer">
 
-        <div class="logos" 
-             style="background-color: #ffffff; 
+        <div class="logos" style="background-color: #ffffff; 
                     padding-top: 18px;
                     padding-bottom: 18px;">
             <img src="../img/banda_logos_UPV_VRAIN_nueva.jpg" alt="Logos">
         </div>
-        <div class="logos"
-            style=" padding: 32px;
+        <div class="logos" style=" padding: 32px;
                     padding-bottom: 12px;
                     width: 80%;
                     align-self: center;">
@@ -81,25 +89,28 @@
             <div class="footer-socials">
                 <p class="titles footer-title"> Más Información</p>
                 <ul>
-                <li><a href="./equipo/equipo.html">Equipos</a></li>
-                <li><a href="./retos/retos.html">Retos</a></li> 
-                <li><a href="./calendario/calendario.html">Calendario</a></li> 
+                    <li><a href="./equipo/equipo.html">Equipos</a></li>
+                    <li><a href="./retos/retos.html">Retos</a></li>
+                    <li><a href="./calendario/calendario.html">Calendario</a></li>
                 </ul>
             </div>
 
             <div class="footer-socials socials-div">
-                <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo" src="../img/makersLogo.png" ></a></div>
+                <div class="logo-cover"><a target="_blank" href="https://makersupv.com"><img class="makers-logo"
+                            src="../img/makersLogo.png"></a></div>
 
                 <ul>
                     <li><a target="_blank" class="fa-brands fa-x-twitter" href="https://twitter.com/makersupv"></a></li>
                     <li><a target="_blank" class="fa fa-github" href="https://github.com/makers-upv"></a></li>
-                    <li><a target="_blank" class="fa fa-linkedin" href="https://www.linkedin.com/company/makers-upv/"></a></li>
+                    <li><a target="_blank" class="fa fa-linkedin"
+                            href="https://www.linkedin.com/company/makers-upv/"></a></li>
                     <li><a target="_blank" class="fa fa-instagram" href="https://www.instagram.com/makersupv/"></a></li>
                 </ul>
             </div>
         </div>
-</section>
+    </section>
 
     <script src="../js/index.js"></script>
 </body>
+
 </html>
